add appointment code
