# Clinic_backend/Doctor/routes.py
@@ -7,23 +7,23 @@ from Clinic_backend.common.models.user import Role
 availability_bp = Blueprint("availability", __name__)
 
 
-@availability_bp.route("/availability", methods=["POST"])
+@availability_bp.route("/", methods=["POST"])
 @role_required(Role.DOCTOR)
-def create_availability(user_id):
+def create_availability(user_id, user_role):
     data = request.get_json()
     data['doctor_id'] = user_id
     try:
         validated = availability_schema.load(data)
         availability = availability_service.create_availability(validated["doctor_id"], validated["start_time"],
                                                                 validated["end_time"])
-        return availability_schema.jsonify(availability), 201
+        return jsonify(availability_schema.dump(availability)), 201
     except ValueError as e:
         return jsonify({"error": str(e)}), 400
 
 
-@availability_bp.route("/availability", methods=["GET"])
+@availability_bp.route("/", methods=["GET"])
 @role_required(Role.DOCTOR)
-def list_availability(user_id):
+def list_availability(user_id, user_role):
     try:
         availabilities = availability_service.list_availability(doctor_id=user_id)
         return jsonify(availabilities_schema.dump(availabilities))
